--- a/src/style/main-user-data/userData.css
+++ b/src/style/main-user-data/userData.css
@@ -69,6 +69,7 @@
   border-right: 0;
   border-radius: 5px 0 0 5px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding: 0px;
 }
 
 .change-photo-button {
