--- a/src/style/main-user-data/userData.css
+++ b/src/style/main-user-data/userData.css
@@ -22,7 +22,7 @@
 
 .user-data img {
   height: 50%;
-  width: auto;
+  width: 80%;
   border-radius: 15px;
   margin-top: 15px;
   border: 2px solid burlywood;
