--- a/src/style/main-user-data/userData.css
+++ b/src/style/main-user-data/userData.css
@@ -29,7 +29,7 @@
 }
 
 .user-info {
-  height: 20%;
+  height: auto;
   width: 80%;
   display: flex;
   justify-content: flex-start;
@@ -60,7 +60,7 @@
 }
 
 .label-photo {
-  height: 50%;
+  height: 30px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -70,10 +70,11 @@
   border-radius: 5px 0 0 5px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   padding: 0px;
+  margin: 5px 0;
 }
 
 .change-photo-button {
-    height: 52%;
+    height: 31px;
     width: 30%;
     display: flex;
     justify-content: center;
@@ -83,7 +84,7 @@
     cursor: pointer;
     border: 1px solid black;
     border-left: 0;
-    padding: 10px;
+    background-color: white;
 }
 
 
