--- a/src/style/main-user-data/userData.css
+++ b/src/style/main-user-data/userData.css
@@ -47,44 +47,41 @@
 }
 
 .update-photo {
-  height: 10%;
-  width: 70%;
+  height: 100%;
+  width: 65%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
+}
+
+.label-photo {
+  height: 25%; 
+  width: 50%;
+  border-right: none;
+  border-radius: 10px 0 0 10px;
+  padding: 10px;
+  display: flex;
+  align-items: center; 
+  box-sizing: border-box; 
+}
+
+.change-photo-button {
+  height: 25%; 
+  width: auto;
+  padding: 10px;
+  display: flex;
+  border: 1px solid black;
+  border-left: none;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 15px 15px 0;
+  cursor: pointer;
+  background-color: white;
+  box-sizing: border-box;
 }
 
 .photo {
   display: none;
-}
-
-.label-photo {
-  height: 30px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid black;
-  border-right: 0;
-  border-radius: 5px 0 0 5px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  padding: 0px;
-  margin: 5px 0;
-}
-
-.change-photo-button {
-    height: 31px;
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-radius: 0 5px 5px 0; 
-    cursor: pointer;
-    border: 1px solid black;
-    border-left: 0;
-    background-color: white;
 }
 
 
